feat: add laravel submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "stubs/stubs/php/php-package"]
 	path = stubs/stubs/php/php-package
 	url = git@github.com:projectista/php-package.git
+[submodule "stubs/stubs/laravel/laravel"]
+	path = stubs/stubs/laravel/laravel
+	url = git@github.com:projectista/laravel.git
